// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YourProfileView _handleSubmit should submit user data 1`] = `
[
  [
    {
      "bio": "CTO",
      "email": "alex@gorgias.io",
      "name": "Alex Plugaru",
      "timezone": "EST",
    },
  ],
]
`;

exports[`YourProfileView _handleSubmit should submit user data and reset the password confirmation field because the email field was marked as changed 1`] = `
[
  [
    {
      "bio": "CTO",
      "email": "alex@gorgias.ioq",
      "name": "Alex Plugaru",
      "password_confirmation": "a-password",
      "timezone": "EST",
    },
  ],
]
`;

exports[`YourProfileView _saveProfilePicture should remove profile picture 1`] = `
[
  [
    {
      "meta": {
        "profile_picture_url": null,
      },
    },
  ],
]
`;

exports[`YourProfileView _saveProfilePicture should save profile picture 1`] = `
[
  [
    {
      "bio": "CTO",
      "email": "alex@gorgias.io",
      "name": "Alex Plugaru",
      "timezone": "EST",
    },
  ],
]
`;
